# rma_go2_lab

./: .gitignore  README.md  TRAINING_SOP.md  pyproject.toml
artifacts/evaluations/: README.md  isolated_suite_rough_teacher_v2_refined_240_complete_teacher_level9_normal_seed999.csv  isolated_suite_rough_teacher_v2_refined_240_complete_teacher_level9_normal_seed999.json
artifacts/manifests/: final_teacher_stage_d_rough_teacher_v2_refined_240_manifest.md  final_teacher_stage_d_rough_teacher_v2_refined_240_manifest.yaml  stage_b_teacher_run_2026-04-01_16-49-39.md  stage_b_teacher_run_2026-04-01_16-49-39.yaml
artifacts/ood_evaluations/: README.md
docs/: BASELINE_COMPARISON_FINAL.md  BASELINE_REGIME_CLOSED.md  FROZEN_BASELINE_RESULTS_AT_A_GLANCE.md  FROZEN_BASELINE_SYNTHESIS.md  OOD_FINDINGS_B1_B2_B3.md  OOD_PROBE_PROTOCOL.md  PROJECT_GUIDE.md
rma_go2_lab/: __init__.py
rma_go2_lab.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
rma_go2_lab/envs/: adaptive_teacher_cfg_rough.py  flat_expert_cfg.py  student_cfg_rough_na.py  teacher_cfg_flat.py  teacher_cfg_rough.py  teacher_cfg_rough_na.py  teacher_rewards.py
rma_go2_lab/models/: actorcritic.py  flat_ppo_cfg.py  ppo_with_flat_expert.py  ppo_with_rma_adaptation.py  rma_actor_critic.py  student_ppo_cfg_na.py  teacher_ppo_cfg_na.py
rma_go2_lab/policies/: README.md  blind_baseline1_scratch_final.md  blind_baseline_protocol.md  (+3 more)
scripts/: eval_isolated.py  eval_per_terrain.py  eval_teacher.py  export_teacher_manifest.py  play_isolated.py  plot_eval_suite.py  run_experiments.py  run_isolated_suite.py  run_stress_test.sh
(+129 files in other folders)
