[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rma_go2_lab"
version = "0.1.0"
description = "RMA implementation for Unitree Go2 using IsaacLab"
authors = [{name = "Bhuvan Lakhera"}]
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
